infrastructure/k8s/jumpbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scavenger-vpc-jumpbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scavenger-vpc-jumpbox
  template:
    metadata:
      labels:
        app: scavenger-vpc-jumpbox
    spec:
      containers:
      - name: jumpbox
        image: linuxserver/openssh-server
        volumeMounts:
        - name: ssh-pub-key
          mountPath: /config/.ssh/authorized_keys
          subPath: mike-pub-key
        - name: sshd-config
          mountPath: /config/ssh_host_keys/sshd_config
          subPath: sshd_config
        resources:
          limits:
            cpu: 125m
            memory: 128Mi
          requests:
            cpu: 125m
            memory: 128Mi
        ports:
        - name: sshd
          containerPort:  2222
      volumes:
      - name: sshd-config
        configMap:
          name: sshd-config
      - name: ssh-pub-key
        secret:
          secretName: scavenger-jumpbox-pub-key
