infrastructure/k8s/scavenger-images.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scavenger-images-deployment-2
  labels:
    app: scavenger-images
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scavenger-images
  template:
    metadata:
      labels:
        app: scavenger-images
    spec:
      imagePullSecrets:
        - name: docker.io.auth
      containers:
      - name: scavenger-images-api
        command:
          - uvicorn
          - image_service.main:app
          - --host
          - 0.0.0.0
          - --port
          - "8000"
        image: ryechus/scavenger-images:0.6
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
