infrastructure/k8s/cms.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cms
spec:
  selector:
    app: cms
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-deployment
  labels:
    app: cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
      - name: cms-django
        command:
          - ./manage.py
          - runserver
          - 0.0.0.0:8000
        image: registry.scavenger.news/scavenger_blog:427b659426d86315a7696871f440902c98f8bed0
        ports:
        - containerPort: 8000
