infrastructure/k8s/image-service-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scavenger-images
spec:
  selector:
    app: scavenger-images
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scavenger-images-deployment
  labels:
    app: scavenger-images
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scavenger-images
  template:
    metadata:
      labels:
        app: scavenger-images
    spec:
      imagePullSecrets:
        - name: docker.io.auth
      containers:
      - name: scavenger-images-fastapi
        image: ryechus/scavenger-image-service:0.4
        command:
          - uvicorn
          - image_service.main:app
          - --host
          - "0.0.0.0"
          - --port
          - "8000"
        ports:
        - containerPort: 8000
