infrastructure/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-public
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32345
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: localvolume
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: localvolume
          persistentVolumeClaim:
            claimName: example-local-claim
